Working-tree snapshot: dist-build fix campaign, packaging portability, in-progress app work
Snapshot of everything accumulated on this branch, taken after the first
successful end-to-end local prebuild (cli-only dist -> kompile-cli:0.1.0
spin image -> container boots and runs --version/--help).

Dist-build fix campaign (8 subagent fixes to make ./build-dist.sh pass):
- kompile-loader-web: truncated 'import FileInputStream' -> java.io
- graph-change-tracking: GroundingCascadeEventListener read accessors that
  never existed on AgentFactRetractedEvent; test updated off the 5-arg
  constructor (a 5-arg overload was later restored delegating to 3-arg)
- model-staging TrainingSubprocessMain: added missing
  resolveVariableDataType helper
- KbConfig: 8 fields added that uncommitted rag/agent callers referenced
  (reasoning-trail-in-prompt, evidence sufficiency, corrective retrieval,
  answer verification, citation contract)
- kompile-tool-graph GraphSearchTool: edge accessors called on GraphNode
- RECREATED two deleted-from-disk classes still imported by main sources
  (untracked-break family): knowledgegraph.matrix.serde.FlatArrayCodec
  (now wraps Nd4j.write/read — NOTE: different wire format than the
  original FlatBuffers codec; do not mix with older deployed binaries)
  and knowledgegraph.embedding.config.GraphBuildingConfigProvider
  (reconstructed from its impl's @Override signatures)
- e2e LlmKnowledgeGraphBuilderTest: stale store imports -> repository types

build-dist.sh packaging robustness:
- JavaCPP cache extraction handles symlink-alias chains (deref absolute
  links, skip relative alias stubs, never write through dangling links)
- normalize_elf_portability(): patchelf normalizes ELF interpreter to
  /lib64/ld-linux-x86-64.so.2 + RPATH $ORIGIN/../lib on native binaries
  copied into dists — GraalVM links on this box embed linuxbrew's
  interpreter, which ENOENTs on any other machine/container

Also in this snapshot: in-progress kompile-app-agent module and r